# bevy-jam-6

./: Cargo.toml
.github/workflows/: ci.yaml  release.yaml
assets/models/: bird.blend  bird.blend1  bird.glb  log.blend  log.glb
crates/color_utils/: Cargo.toml
src/: audio.rs  camera.rs  collision_system.rs  color_scheme.rs  components.rs  debug.rs  events.rs  game_logic.rs  init.rs  input.rs  loading.rs  logs.rs  main.rs  menu.rs  models.rs  player.rs  resources.rs  states.rs  system_sets.rs
